deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web-challenge
  name: web-challenge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-challenge
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web-challenge
    spec:
      containers:
      - image: web-challenge
        name: web-challenge
        resources: {}
        imagePullPolicy: Never
status: {}
